@@ -1,3 +1,9 @@
+2009-10-14  Hans-Peter Nilsson  <hp@axis.com>
+
+	PR target/38948
+	* config/cris/cris.h (SECONDARY_RELOAD_CLASS): Handle reload
+	requests between special registers.
+
 2009-10-12  Hans-Peter Nilsson  <hp@axis.com>
 
 	PR target/26515
